--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -22,7 +22,7 @@
           {{#each bigSticky.Reminders as |reminder|}}
             <li class="reminders" data-ReminderId="{{id}}">
               <input type="checkbox" class="checkTask" data-ReminderId="{{id}}" >
-              {{task}}{{#if isRecurring}}<i>,  every {{numPeriods}} {{timePeriod}}(s)</i>{{/if}}  –  due: {{nextDue}}
+              {{task}}{{#if isRecurring}}   (every {{numPeriods}} {{timePeriod}}(s))</i>{{/if}}  –  due: {{nextDue}}
               {{#if note}} 
                 <span style="font-style:italic; color:grey">
                 <br>      {{note}}
