--- a/public/css/style.css
+++ b/public/css/style.css
@@ -347,9 +347,18 @@ button {
   border-style: none;
 }
 .reminders {
+  display: flex;
+  align-items: center;
   font-size: 20px;
   font-weight: 900;
   color: black;
+  line-height: 28px;
+}
+
+.checkTask{
+  margin-right: 15px;
+  transform: scale(1.5);
+  line-height: 28px;
 }
 
 .bigStickyTitle {
@@ -587,6 +596,7 @@ input[type="radio"]:checked {
 
 
 
+
 /* MEDIA QUERIES */
 
 @media screen and (max-width: 992px) {
@@ -608,8 +618,7 @@ input[type="radio"]:checked {
 
   li {
     max-width: 100%;
-    overflow: auto;
-    overflow-wrap: break-word;
+   
   }
 }
 
@@ -638,6 +647,8 @@ input[type="radio"]:checked {
   }
   #wizBtn {
     display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-around;
   }
   #center {
@@ -673,6 +684,10 @@ input[type="radio"]:checked {
 }
 
 @media only screen and (max-width: 480px) {
+html{
+  margin: 0;
+}
+
   #about {
     height: 600px;
     margin-bottom: 20px;
@@ -683,5 +698,8 @@ input[type="radio"]:checked {
   }
   #catchPhrase {
     height: 380px;
+  }
+  #biggerSticky{
+    transform: scale(.75);
   }
 }
