--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,8 +116,8 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 2.5rem;
-  font-family: "iskra", sans-serif;
-  font-weight: 900;
+  font-family: "ccmeanwhile", sans-serif;
+  font-weight: 400;
   font-style: normal;
   font-size: 1.5rem;
   margin: 20px;
