sticky to signup page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,7 +10,8 @@
             With easy-to-use reminders for everything from changing air filters
             to getting your oil changed, #Adulting makes it easy to stay on
             track and avoid costly repairs down the line. Download #Adulting
-            today and take the first step towards stress-free maintenance!</p>
+            today and take the first step towards stress-free maintenance!
+          </p>
         </div>
       </div>
     </section>
