--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -31,20 +31,9 @@
     </aside>
   </section>
   <section id="desk">
-        <div id="sticky">
-        {{!-- placeholder --}}
-        </div>
-        <div id="sticky">
-        {{!-- placeholder --}}
-        </div>
-        <div id="sticky">
-        {{!-- placeholder --}}
-        </div>
-        <div id="sticky">
-        {{!-- placeholder --}}
-        </div>
-        <div id="addCategory">
-            <h5 id="acc">Add Custom Category</h5>
-        </div>
+    {{#each sticky}}
+    {{>sticky}}
+    {{/each}}
+    <script src="/js/desk.js"></script>
   </section>
 </section>
