--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,28 @@ html {
   height: 100%;
 }
 
+
+
+/* Scroll bar */
+::-webkit-scrollbar {
+  width: 9px;
+  height: 9px;
+}
+
+/* Scroll bar */
+::-webkit-scrollbar-thumb {
+  background-color: #4d4c4c;
+  border-radius: 4px;
+  opacity: 0.005;
+}
+
+/* Scroll bar track */
+::-webkit-scrollbar-track {
+ border: 1px solid rgb(81, 80, 80);
+  border-radius: 4px;
+  opacity: 0.5;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -294,6 +316,9 @@ main {
 
 ol {
   margin-top: 20px;
+  max-width: 100%;
+  overflow: auto;
+  overflow-wrap: break-word;
 }
 #lineDash {
   display: flex;
@@ -354,9 +379,9 @@ button {
 .reminders {
   display: flex;
   align-items: center;
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 900;
-  color: black;
+  color: rgb(49, 49, 49);
   line-height: 28px;
 }
 
