login, sign up verbage

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -27,7 +27,7 @@
         <label for="password">Password:</label>
         <input type="password" id="login-password">
         <button id="login-button">Login</button>
-        <a id="sI" href="/signup">Sign Up</a>
+        <a id="sI" href="/signup">Don't have an account yet? Sign Up</a>
       </form>
 
       <script src="/js/login.js"></script>
