Styled addTask for, fixed notes placement

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -264,6 +264,7 @@ main {
   color: rgb(57, 56, 56);
 }
 
+
 #addCategory {
   display: flex;
   justify-content: center;
@@ -279,6 +280,8 @@ main {
   margin: 5px;
 }
 
+
+
 #nextUp {
   width: 75%;
   margin-left: 40px;
@@ -287,6 +290,7 @@ main {
 #chalkHeader {
   font-size: 2rem;
 }
+
 
 #biggerSticky {
   display: flex;
@@ -297,22 +301,7 @@ main {
   margin-right: 50px;
   height: 29rem;
   width: 50rem;
-  animation-name: grow;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
 }
-/* @keyframes grow {
-  from {
-   
-    width: 22rem;
-    height: 22rem;
-  }
-  to {
-
-    width: 50rem;
-    height: 29rem;
-  }
-} */
 
 ol {
   margin-top: 20px;
@@ -377,19 +366,26 @@ button {
   border-style: none;
 }
 .reminders {
-  display: flex;
-  align-items: center;
+  display:block;
   font-size: 22px;
   font-weight: 900;
   color: rgb(49, 49, 49);
   line-height: 30px;
+  text-indent: -25px;
+  margin-left: 35px;
+
 }
 
 .checkTask {
+  position: relative;
+  width:1rem;
+  height: 1rem;
   margin-right: 15px;
   transform: scale(1.5);
-  line-height: 28px;
+  
 }
+
+
 
 .bigStickyTitle {
   font-size: 3rem;
@@ -400,12 +396,12 @@ button {
   height: 22rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
   margin: 15px 40px 5px 40px;
   overflow: auto;
  
 }
+
+
 
 #btn {
   height: 2rem;
@@ -441,6 +437,8 @@ label {
   color: rgb(77, 76, 76);
   margin: 3px;
 }
+
+
 
 #login-button {
   font-family: "larken", sans-serif;
@@ -483,7 +481,7 @@ label {
 .checkCat {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items:flex-start;
   margin-top: 5px;
   margin-bottom: 5px;
   justify-content: flex-end;
@@ -578,6 +576,13 @@ label {
   padding-right: 5px;
   line-height: 2rem;
 }
+#isRecurring{
+  margin-right:40px;
+
+}
+
+
+
 
 #newCat {
   height: 352px;
