--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -24,15 +24,16 @@
               <input type="checkbox" class="checkTask" data-ReminderId="{{id}}" >
               {{task}}{{#if isRecurring}}   (every {{numPeriods}} {{timePeriod}}(s))</i>{{/if}}  –  due: {{nextDue}}
               {{#if note}} 
-                <span style="font-style:italic; color:grey">
+                <span style="font-style:italic; color:rgb(217, 215, 215)">
                 <br>      {{note}}
                 </span>
               {{/if}}
             </li>
 
           {{/each}}
+          
       </ol>
-      <div id="btn">
+      <div id="btn" style="display:flex;  align-self: center;">
         <button id="addTask">+ Add Task</button>
       </div>
 
