--- a/public/css/style.css
+++ b/public/css/style.css
@@ -293,7 +293,7 @@ main {
   flex-direction: column;
   padding: 10px;
   padding-bottom: 40px;
-  background-color: var(--blue-sticky);
+  /* background-color: var(--blue-sticky); */
   margin-right: 50px;
   height: 29rem;
   width: 50rem;
@@ -332,7 +332,7 @@ li {
   font-weight: 300;
   font-style: normal;
   color: rgb(232, 230, 230);
-  list-style-type: none;
+  list-style-type:none;
   line-height: 25px;
   margin-left: 10px;
   text-align: left;
@@ -368,7 +368,7 @@ button {
   font-family: "larken", sans-serif;
   font-weight: 300;
   font-style: normal;
-  margin-top: 15px;
+  /* margin-top: 15px; */
   padding: 5px 10px 5px 10px;
   font-size: 18px;
   color: rgb(191, 189, 189);
@@ -377,8 +377,8 @@ button {
   border-style: none;
 }
 .reminders {
-  display: flex;
-  align-items: center;
+  /* display: flex; */
+  align-items: start;
   font-size: 22px;
   font-weight: 900;
   color: rgb(49, 49, 49);
@@ -386,9 +386,9 @@ button {
 }
 
 .checkTask {
-  margin-right: 15px;
-  transform: scale(1.5);
-  line-height: 28px;
+  margin-right: 10px;
+  height: 20px;
+  transform: scale(1.5) translateY(2px);
 }
 
 .bigStickyTitle {
@@ -398,8 +398,8 @@ button {
 
 #remindList {
   height: 22rem;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   justify-content: flex-start;
   align-items: flex-start;
   margin: 15px 40px 5px 40px;
@@ -568,8 +568,7 @@ label {
   align-items: center;
   justify-content: flex-end;
   font-size: 16px;
-  background-color: rgb(45, 45, 45);
-  color: azure;
+  color: rgb(49, 49, 49);
   border-radius: 2px;
   margin: 0;
   width: 200px;
@@ -618,22 +617,22 @@ input[type="radio"]:checked {
   width: 234px;
 }
 .color1 {
-  color: var(--magenta-sticky);
+  background-color: var(--magenta-sticky);
 }
 .color2 {
-  color: var(--blue-sticky);
+  background-color: var(--blue-sticky);
 }
 .color3 {
-  color: var(--teal-sticky);
+  background-color: var(--teal-sticky);
 }
 .color4 {
-  color: var(--yellow-sticky);
+  background-color: var(--yellow-sticky);
 }
 .color5 {
-  color: var(--pink-sticky);
+  background-color: var(--pink-sticky);
 }
 .color6 {
-  color: var(--Yel-Grn-sticky);
+  background-color: var(--Yel-Grn-sticky);
 }
 
 /* MEDIA QUERIES */
@@ -657,6 +656,9 @@ input[type="radio"]:checked {
 
   li {
     max-width: 100%;
+  }
+  .reminders {
+    font-size: 16px
   }
 }
 
@@ -740,4 +742,5 @@ input[type="radio"]:checked {
   #biggerSticky {
     transform: scale(0.75);
   }
+
 }
