--- a/views/wizard.handlebars
+++ b/views/wizard.handlebars
@@ -9,7 +9,7 @@
             <div class="checkCat">
                 <input type="checkbox" id="categoryName{{id}}" data-templateCategoryId={{id}} class="checkCircle">
                 <label for="categoryName{{id}}" class="wizLab">{{name}}</label>
-          </div>
+            </div>
           {{/each}}
         </ul>
         <div id="wizBtn">
@@ -20,7 +20,7 @@
       </div>
     </section>
 
-    <aside id="biggerSticky">
+    <aside id="biggerSticky" class="color1">
       <div id="stickHead">
       </div>
       <ul id="remindList">
