--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,7 +6,7 @@
         <span id="lineDash"></span>
         <ol id="nextTasks">
           {{#each chalkBoard}}
-            <li class="task" data-ReminderId={{id}} style="font-size:22px; font-weight:900;{{#if overdue}} color:#ff6989{{/if}}">{{Category.name}}: {{task}} - due: {{nextDue}}</li>
+            <li class="task" data-CategoryId={{CategoryId}} data-ReminderId={{id}} style="font-size:22px; font-weight:900;{{#if overdue}} color:#ff6989{{/if}}"><input type="checkbox" class="checkTask" data-ReminderId="{{id}}" >{{Category.name}}: {{task}} - due: {{nextDue}}</li>
           {{/each}}
         </ol>
 
@@ -21,7 +21,7 @@
       <ol id="remindList">
           {{#each bigSticky.Reminders as |reminder|}}
             <li class="reminders" data-ReminderId="{{id}}">
-              <input type="checkbox" class="checkTask" data-ReminderId="{{id}}" >
+              <input type="checkbox" class="checkTask" data-ReminderId="{{id}}">
               {{task}}{{#if isRecurring}} (every {{numIntervals}} {{timeInterval}}{{#if plural}}s{{/if}})</i>{{/if}}   –  due: {{nextDue}}{{#if note}}
               <span style="font-size:75%; font-style:italic; color:grey;">
                       {{note}}
