--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,10 +7,11 @@
         <span id="line"></span>
         <div id="about">
           <p>
-            With easy-to-use reminders for everything from changing air filters
-            to getting your oil changed, #Adulting makes it easy to stay on
-            track and avoid costly repairs down the line. Download #Adulting
-            today and take the first step towards stress-free maintenance!
+            With easy-to-use reminders for everything from replacing 
+            your air filters to taking Fido to the vet for his annual checkup, 
+            #ADULTING makes it easy to stay on track and avoid costly 
+            repairs down the line. Sign up today to start receiving email reminders 
+            that fit your adult responsibilities!
           </p>
         </div>
       </div>
@@ -34,11 +35,13 @@
 
     </aside>
   </section>
+
   <section id="desk" data-loggedIn={{loggedIn}}>
       {{#each sticky}}
         {{>sticky}}
       {{/each}}
 
       <script src="/js/desk.js"></script>
+      
   </section>
 </section>
