--- a/views/category-editor.handlebars
+++ b/views/category-editor.handlebars
@@ -48,6 +48,7 @@
           <div id="create">
             <button type = "submit" value = "Submit" id = "save-button">Update</button>
             <button id = "cancel-button">Cancel</button>
+            <button id = "deleteBtn" style="color:red">Delete</button>
           </div>
         </form>
             
