--- a/public/css/style.css
+++ b/public/css/style.css
@@ -357,7 +357,7 @@ button {
   font-family: "larken", sans-serif;
   font-weight: 300;
   font-style: normal;
-  /* margin-top: 15px; */
+  margin: 5px 10px;
   padding: 5px 10px 5px 10px;
   font-size: 18px;
   color: rgb(191, 189, 189);
